[package]
name = "mm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
shellexpand = "2.1.2"
solana-sdk = "1.10.32"
solana-client = "1.10.32"
solana-account-decoder = "1.14.7"
solana-cli-config = "1.14.7"
borsh = "0.9.3"
tokio = { version = "1.8.4", features = ["full"] }
rand = "0.7.3"
itertools = "0.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1.13.0"
reqwest = "0.11.14"
bincode = "1.3.3"
phoenix-onchain-mm = { version = "0.1.0", path = "../programs/phoenix-onchain-mm", features = ["no-entrypoint"] }
phoenix-v1 = { version = "0.2.3", features = ["no-entrypoint"] }
phoenix-sdk = "0.4.2"
 yellowstone-grpc-client = "=1.1.1+solana.1.15.2"
 yellowstone-grpc-proto = "=1.1.0+solana.1.15.2"
anchor-lang = "0.26.0"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.1", features = [ "no-entrypoint" ] } 
bs58 = "0.5.0"