[package]
name = "phoenix-onchain-mm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "phoenix_onchain_mm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
phoenix-v1 = { version = "0.2.3", features = ["no-entrypoint"] }
toml_edit = "=0.18.1"
proc-macro-crate = "=1.3.0"